# Todo_List

./: CMakeLists.txt  README.md  Task.cpp  Task.h  TodoApp.h  TodoList.cpp  TodoList.h  main.cpp  todolist.txt
liste/: prova.txt  todolist.txt
test/: CMakeLists.txt  TaskTest.cpp  TodoFixture.cpp  TodoListTest.cpp
